# agent-city

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  start-dev.sh
.github/workflows/: ci.yml
apps/server/: package-lock.json  package.json  tsconfig.json
apps/server/src/: agentRuntime.test.ts  agentRuntime.ts  agentStore.ts  attachmentRuntime.test.ts  citySkillWorkspace.test.ts  db.ts  desktopNotificationService.test.ts  desktopNotificationService.ts  googleConnector.ts  index.ts  knowledgeService.test.ts  knowledgeService.ts  memoryService.ts  migrations.test.ts  migrations.ts  modelGateway.test.ts  modelGateway.ts  modelProfiles.test.ts  modelProfiles.ts  safeNetwork.test.ts  safeNetwork.ts  scheduledTaskService.test.ts  scheduledTaskService.ts  seedLayout.test.ts  seedLayout.ts  sessionService.test.ts  sessionService.ts  skillReview.test.ts  skillRouting.test.ts  testModelProfile.ts  themeCatalogService.test.ts  themeCatalogService.ts  workflow.test.ts  workflow.ts  workspaceAccess.test.ts  workspaceAccess.ts
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/skill-icons/: README.md  manifest.json
apps/web/src/: App.tsx  index.css  main.tsx  types.ts
docs/: THEME_PACKAGES.md  architecture.md  megalithic-decor-placement-guide.json
scripts/: prepare-tauri.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+66 files in other folders)
