[package]
name = "agent-city"
version = "0.1.2"
description = "Agent City desktop application"
authors = ["Agent City"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
